newsapp-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: newsapp.local
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: newsapp-backend
                port:
                  number: 8080
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: newsapp-frontend
                port:
                  number: 1234
